# BulkWavConverter

./: .gitignore  CMakeLists.txt  README.md
lib/gmock/include/gmock/: gmock-generated-actions.h.pump  gmock-generated-function-mockers.h.pump  gmock-generated-matchers.h.pump
lib/lame/include/: Makefile  lame.h
src/: Common.h  Main.cpp  Mp3EncoderTask.cpp  Mp3EncoderTask.h
src/services/: ConsoleLoggingService.cpp  ConsoleLoggingService.h  DirectoryService.cpp  DirectoryService.h  LameService.cpp  LameService.h  LoggingService.cpp  LoggingService.h
src/threading/: PoolWorkerThread.cpp  PoolWorkerThread.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  ThreadTask.h  ThreadWorkQueue.cpp  ThreadWorkQueue.h
src/wavfile/: Encoder.cpp  Encoder.h  WavFileEncoder.cpp  WavFileEncoder.h
test/: TestMain.cpp  ThreadTaskTest.hpp  ThreadWorkQueueTest.hpp
